Correct Image Description positio

--- a/recipes/picanha.html
+++ b/recipes/picanha.html
@@ -1,5 +1,8 @@
 <h1> Picanha </h1>
-<img src="./Images/picanha" alt="Delicious Picanha Dish"> Picanha Cut after resting </img>
+<div>
+    <img src="./Images/picanha" alt="Delicious Picanha Dish" width="600px"> 
+    <h4>Sirlon Cap Cut after Resting</h4>
+</div>
 
 <p>
    Picanha, known but many as "The Queen" is a traditional way of preparing the Sirloin Cap in Brazil. Its a tender, 
@@ -31,5 +34,15 @@
 <h2>Preparation</h2>
 <p> Now, lets get into actually cooking some picanha</p>
 <ol>
-    <li></li>
+
+    <li> Cut Steaks (Remember to go <strong>with the grain</strong></li>
+    <li> Dry Brine Overnight</li>
+    <li> Preheat Grill (Can't hold hand for more than 3seconds) </li>
+    <li> Place steak directly over the heat</li>
+    <li> Turn the steaks over as many times as needed, to avoid burning</li>
+    <li> Keep turning until the skeaks have a nice crust</li>
+    <li> Check internal temperature (compare to Temp Table)</li>
+    <li> If desired term is achieved, take the steaks out. If not, keep them at low heat until desired term is achieved</li>
+    <li> Let each steak rest for about 5minutes. Belive me, its crucial. </li>
+    <li> Cut perpendicular to the lenght of the steak and enjoy</li>
 </ol>
