--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/picanha.html">Picanha</a>
+   <ul>
+     <li><a href="recipes/picanha.html">Picanha</a></li> 
+     <li><a href="recipes/chimichurri.html">Chimichurri</a></li> 
+     <li><a href="recipes/platano-con-queso.html">Plátano with cheese</a></li> 
+   </ul>
+
 </body>
 </html>
