--- a/recipes/picanha.html
+++ b/recipes/picanha.html
@@ -1,6 +1,6 @@
 <h1> Picanha </h1>
 <div>
-    <img src="./Images/picanha" alt="Delicious Picanha Dish" width="600px"> 
+    <img src="https://www.hola.com/imagenes/cocina/noticiaslibros/20201028178102/picanha-que-es/0-882-799/picana-m.jpg" alt="Delicious Picanha Dish" width="350px"> 
     <h4>Sirlon Cap Cut after Resting</h4>
 </div>
 
@@ -35,7 +35,7 @@
 <p> Now, lets get into actually cooking some picanha</p>
 <ol>
 
-    <li> Cut Steaks (Remember to go <strong>with the grain</strong></li>
+    <li> Cut Steaks (Remember to go <strong>with the grain</strong>)</li>
     <li> Dry Brine Overnight</li>
     <li> Preheat Grill (Can't hold hand for more than 3seconds) </li>
     <li> Place steak directly over the heat</li>
