Add Back to index to all recipes

--- a/recipes/chimichurri.html
+++ b/recipes/chimichurri.html
@@ -42,3 +42,4 @@
 <p> Also, feel free to add more flavros to the mix, like peppers, lemon or pepper. Get creative with
     it until you have you perfect chimichurry recipe
 </p>
+<a href="../index.html">Back to index</a>
