--- a/recipes/picanha.html
+++ b/recipes/picanha.html
@@ -46,3 +46,4 @@
     <li> Let each steak rest for about 5minutes. Belive me, its crucial. </li>
     <li> Cut perpendicular to the lenght of the steak and enjoy</li>
 </ol>
+<a href="../index.html">Back to index</a>
