--- a/recipes/platano-con-queso.html
+++ b/recipes/platano-con-queso.html
@@ -38,3 +38,4 @@
     <li> After finishing your picanha, your plantains should be ready to serve.</li>
     <li> Optional: add some Berrie Jam on top of the cheese </li>
 </ol>
+<a href="../index.html">Back to index</a>
