--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <h2> Grilled Diner:</h2>
    <ul>
      <li><a href="recipes/picanha.html">Picanha</a></li> 
      <li><a href="recipes/chimichurri.html">Chimichurri</a></li> 
