--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
     <h1>Odin Recipes</h1>
     <h2> Grilled Diner:</h2>
+    <h3>Nothing better than Grilling your diner. </h3>
+    <img src="https://media.istockphoto.com/photos/picanha-brazilian-barbecue-picture-id523031995?k=20&m=523031995&s=612x612&w=0&h=hkq_YP40H4Ba-e0pLl2IUcpTr7ijMtzLXF0EaEcSDzg=" 
+    alt="Grilled Sirloin Cap" width="350px">
+
+    <h4> Grilled Sirloin Cap</h4>
    <ul>
      <li><a href="recipes/picanha.html">Picanha</a></li> 
      <li><a href="recipes/chimichurri.html">Chimichurri</a></li> 
